:hammer: fix responsive mobile and add truncatext function to overview data

--- a/src/components/UI/Button.scss
+++ b/src/components/UI/Button.scss
@@ -244,7 +244,7 @@
     &--view {
       background-color: #d85b53;
       width: 120px;
-      height: 30px;
+      height: 20px;
       font-size: 10px;
       background-color: rgba(216, 91, 83, 0.9);
       border: 0;
