--- a/src/pages/Movies/PopMovieList.scss
+++ b/src/pages/Movies/PopMovieList.scss
@@ -190,8 +190,8 @@
 
     &__title-overlay {
       display: none;
-     }
- 
+    }
+
 
     &__background-responsive {
       width: 100%;
@@ -213,6 +213,7 @@
           rgb(0, 0, 0, 0.4) 80%,
           transparent 100%);
       margin-top: 20px;
+      padding-bottom: 50px;
     }
 
     &__f-d-box {
@@ -223,7 +224,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      margin-top: 10px;
+      margin-top: 0px;
 
     }
 
@@ -603,12 +604,13 @@
   }
 
   @media only screen and (min-width: 820px) and (max-width: 912px) and (min-height: 1180px) and (max-height: 1368px) {
- 
-  &__f-d-container {
+
+    &__f-d-container {
       width: 100%;
       height: 50%;
       background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, 0.5) 75%, rgba(0, 0, 0, 0.4) 80%, transparent 100%);
-  }
+    }
+
     &__slider-container {
       margin-right: 0px;
 
@@ -643,5 +645,5 @@
     }
 
   }
-  
+
 }
