--- a/src/pages/TV/Shows.scss
+++ b/src/pages/TV/Shows.scss
@@ -213,6 +213,7 @@
           rgb(0, 0, 0, 0.4) 80%,
           transparent 100%);
       margin-top: 20px;
+      padding-bottom: 50px;
     }
 
     &__f-d-box {
@@ -223,7 +224,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      margin-top: 10px;
+      margin-top: 0px;
 
     }
 
